* Refactor the usage of Charset * Simplify Base64 * Use the Codehaus Cargo Base64 class (also in tests), which removes the commons-codec dependency