@@ -19,13 +19,13 @@
  */
 package org.codehaus.cargo.container.jboss;
 
-import java.io.UnsupportedEncodingException;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.SocketTimeoutException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
 
 import org.codehaus.cargo.container.ContainerException;
 import org.codehaus.cargo.container.RemoteContainer;
@@ -310,18 +310,6 @@ public class JBoss4xRemoteDeployer extends AbstractRemoteDeployer
      */
     private String encodeURLLocation(URL url)
     {
-        String encodedString;
-
-        try
-        {
-            encodedString = URLEncoder.encode(url.toExternalForm(), "UTF-8");
-        }
-        catch (UnsupportedEncodingException e)
-        {
-            throw new ContainerException("Failed to encode Deployable location [" + url
-                + "] using an [UTF-8] encoding", e);
-        }
-
-        return encodedString;
+        return URLEncoder.encode(url.toExternalForm(), StandardCharsets.UTF_8);
     }
 }
